# stacktical-dsla-solana-program

./: Anchor.switchboard.toml  Anchor.toml  Cargo.toml  README.md  docker-compose.switchboard.yml  package-lock.json  package.json  start-local-validator.sh  switchboard.env  switchboard.json
.github/actions/setup-solana/: action.yml
.github/actions/setup-ts/: action.yaml
.github/workflows/: soteria.yaml  test.yaml
anchor-client-gen/: programId.ts
anchor-client-gen/accounts/: Governance.ts  Lockup.ts  Sla.ts  SlaRegistry.ts  StatusRegistry.ts  index.ts
anchor-client-gen/errors/: custom.ts
anchor-client-gen/instructions/: deploySla.ts  index.ts  initLockupAccounts.ts  initSlaRegistry.ts  modifyGovernance.ts  stakeUser.ts  validatePeriod.ts  withdrawProvider.ts
anchor-client-gen/types/: DslaDecimal.ts  PeriodGenerator.ts  PeriodLength.ts  SlaStatus.ts  Slo.ts  SloType.ts  Status.ts  index.ts
app/: package-lock.json  package.json  tsconfig.json
app/src/: constants.ts  index.ts  init_governance.ts
cli/: package.json
cli/anchor-client-gen/: programId.ts
cli/anchor-client-gen/accounts/: Governance.ts  Lockup.ts  Sla.ts  SlaAuthority.ts  StatusRegistry.ts  index.ts
cli/anchor-client-gen/errors/: custom.ts
cli/anchor-client-gen/instructions/: deploySla.ts  index.ts  initGovernance.ts  initLockupAccounts.ts  initSlaRegistry.ts  modifyGovernance.ts  stakeProvider.ts  validatePeriod.ts  withdrawProvider.ts  withdrawUser.ts
cli/anchor-client-gen/types/: DslaDecimal.ts  FeedErrorCode.ts  PeriodGenerator.ts  PeriodLength.ts  SlaStatus.ts  Slo.ts  SloType.ts  Status.ts  index.ts
cli/src/: constants.ts  governance.ts  index.ts  lockup_accounts.ts  sla.ts  sla_registry.ts  stake_provider.ts  stake_user.ts  switchboard.ts  validate.ts  withdraw.ts
programs/SLO-registry/: Cargo.toml
programs/dsla/: Cargo.toml
programs/dsla-stacktical-contracts-solana/: Cargo.toml
programs/dsla-stacktical-contracts-solana/src/: lib.rs
programs/dsla/src/: constants.rs  errors.rs  events.rs  lib.rs  utils.rs
programs/dsla/src/instructions/: claim.rs  create_sla.rs  deploy_sla.rs  init_governance.rs  init_lockup_accounts.rs  init_provider_accounts.rs  init_sla_registry.rs  init_user_accounts.rs  init_ut_pt_accounts.rs  initialize_period.rs  initialize_period_registry.rs  mod.rs  modify_governance.rs  register_slo.rs  stake.rs  stake_provider.rs  stake_provider_side.rs  stake_user.rs  stake_user_side.rs  validate.rs  validate_period.rs  withdraw.rs  withdraw_provider.rs  withdraw_user.rs
programs/dsla/src/state/: governance.rs  lockup.rs  mod.rs  period_generator.rs  period_registry.rs  reward.rs  sla.rs  sla_authority.rs  sla_registry.rs  sli.rs  slo.rs  status_registry.rs  utils.rs
programs/proof-of-concept/: Cargo.toml
programs/proof_of_concept/: Cargo.toml
programs/proof_of_concept/src/: lib.rs
programs/slo_registry/: Cargo.toml
programs/slo_registry/src/: lib.rs
programs/slo_registry/src/instructions/: register_slo.rs
programs/slo_registry/src/state/: mod.rs
serverless/: cloudbuild.yaml  function.js  index.js  package-lock.json  package.json  solana_status_uptime.js
tests/: constants.ts  create_sla.ts  deploy_sla.ts  dsla-stacktical-contracts-solana.ts  init.ts  init_governance.ts  init_lockup_accounts.ts  init_sla_registry.ts  init_ut_pt_accounts.ts  initialize_period.ts  initialize_period_registry.ts  proof-of-concept.ts  proof_of_concept.ts  register_slo.ts  slo_registry.ts  stake.ts  stake_provider.ts  stake_user.ts  test.ts  utils.ts  validate.ts
(+2 files in other folders)
