[package]
name = "stacktical-dsla-contracts-solana"
version = "0.1.0"
description = "stack dsla contracts on solana blockchain using anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "stacktical_dsla_contracts_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.22.1"
anchor-spl = "0.22.1"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }