[package]
name = "dsla"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dsla"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []


[dependencies]
anchor-lang = { version = "0.26.0" }
anchor-spl = { version = "0.26.0" }
switchboard-v2 = { version = "0.1.16", features = ["devnet"] }
rust_decimal = { version = "1.27.0", features = ["borsh"] }
