[package]
name = "proof_of_concept"
version = "0.1.0"
description = "proof of concept dsla contracts on solana blockchain using anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "proof_of_concept"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.23.0"
anchor-spl = "0.23.0"
spl-token = { version="3.2.0", features = [ "no-entrypoint" ] }
spl-token-metadata = { version="0.0.1", features = [ "no-entrypoint" ] }